Data2Restful/k8scli/src/main/resources/k8sYamlTemplate/ingress/base_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${groupName}-ingress
  labels:
    app: data-center-api   # 添加一个名为 "app" 的标签，可以根据需要添加其他标签
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host:
      http:
        paths:
          - path: /${groupName}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${groupName}-svc
                port:
                  number: 5000
